--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Jamie Darbon - Game Developer</title>
+    <link rel="stylesheet" href="css/style.css" />
+</head>
 <body>
     <h1>Hello World</h1>
     <p>test</p>
