--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>test</p>
+    <div class="header">
+    </div>
+    <div class="container-fluid">
+        <div class="col-sm-12" id="titles">
+            <div id="title" class="sol-sm-10">
+                <p style="text-align:left;">Game Developer | Artist | Programmer</p>
+                <h1 style="text-align:left;">JAMIE<br>DARBON</h1>
+                <p style="text-align:left;">Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2022, he graduated from the University of Sussex 
+                with a First Class Honours degree in "Games and Multimedia Environments.</p>
+            </div>
+            <br>
+        </div>
+    </div>
 </body>
 </html>
