--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             <div id="title" class="sol-sm-10">
                 <p style="text-align:left;">Game Developer | Artist | Programmer</p>
                 <h1 style="text-align:left;">JAMIE<br>DARBON</h1>
-                <p style="text-align:left;">Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2022, he graduated from the University of Sussex 
-                with a First Class Honours degree in "Games and Multimedia Environments.</p>
+                <p style="text-align:left;">Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2023, Jamie graduated from the University of Sussex 
+                with a First Class Honours degree in "Games and Multimedia Environments".</p>
             </div>
             <br>
         </div>
     </div>
+    <video width="400" autoplay loop muted>
+        <source src="portfolio.mp4" type="video/mp4"/>
+    </video>
 </body>
 </html>
