--- a/index.html
+++ b/index.html
@@ -6,20 +6,53 @@
 </head>
 <body>
     <div class="header">
+        <ul>
+            <li><p>About Me</p></li>
+            <li><p>Education</p></li>
+            <li><p>Portfolio</p></li>
+            <li style="float: right;"><p>Contact</p></li>
+        </ul>
     </div>
-    <div class="container-fluid">
-        <div class="col-sm-12" id="titles">
-            <div id="title" class="sol-sm-10">
-                <p style="text-align:left;">Game Developer | Artist | Programmer</p>
-                <h1 style="text-align:left;">JAMIE<br>DARBON</h1>
-                <p style="text-align:left;">Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2023, Jamie graduated from the University of Sussex 
-                with a First Class Honours degree in "Games and Multimedia Environments".</p>
+    <div class="container-fluid" id="contents">
+        <div class="container-fluid" id="intro">
+            <div class="col-sm-12" id="titles">
+                <div id="title" class="sol-sm-10">
+                    <p style="text-align:left;">Game Developer | Artist | Programmer</p>
+                    <h1 style="text-align:left;">JAMIE<br>DARBON</h1>
+                    <p style="text-align:left;">
+                        Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2023, Jamie graduated from the University of Sussex
+                        with a First Class Honours degree in "Games and Multimedia Environments".
+                    </p>
+                </div>
+                <br>
             </div>
-            <br>
+            <video width="400" autoplay loop muted>
+                <source src="portfolio.mp4" type="video/mp4" />
+            </video>
+            <div class="container-fluid" id="about">
+                <div class="col-sm-8">
+                    <img src="Jamie-Darbon.jpg" width="35%" id="picture" />
+                    <h1>About Me</h1>
+                    <p id="text">
+                        I am a self-motivated and driven individual who is always striving to improve and willing to
+                        learn. From a young age, I have spent time learning and developing skills which I now use to<br />
+                        bring myself an income as a self-employed artist and designer online. During my time in
+                        secondary school, I balanced my education with making comics which I published every<br />
+                        week, helping me to develop time management skills. I’ve always had an interest in
+                        computers and video games, which have fueled my professional development and informed<br />
+                        my career choices. Along with developing artistic skills, I spent a lot of time growing up
+                        developing technical skills relating to game development and am proficient in various<br />
+                        coding languages such as C, C++, C#, HLSL, Java and Javascript.<br />
+                        <br />
+                        In my spare time, I like to work on a range of creative projects such as video editing, art, and
+                        game development. I am currently using my skills to work on an experimental 3D game about<br />
+                        graffiti in the Unity engine where I have created all the assets myself, including 3D models
+                        and shaders written in HLSL. I am also semi-fluent in French, having studied it up to A-Level<br />
+                        and continuing to study it in my spare time in the years since.<br />
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
-    <video width="400" autoplay loop muted>
-        <source src="portfolio.mp4" type="video/mp4"/>
-    </video>
 </body>
 </html>
