--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <body>
     <div class="header">
         <ul>
-            <li><p>About Me</p></li>
-            <li><p>Education</p></li>
-            <li><p>Portfolio</p></li>
-            <li style="float: right;"><p>Contact</p></li>
+            <div class="container-fluid" id="headerContainer">
+                <li><p>About Me</p></li>
+                <li><p>Education</p></li>
+                <li><p>Portfolio</p></li>
+                <li style="float: right;"><p>Contact</p></li>
+            </div>
         </ul>
     </div>
     <div class="container-fluid" id="contents">
