Fixed About Screen Positioning

--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
                     <h1>About Me</h1>
                     <p id="text">
                         I am a self-motivated and driven individual who is always striving to improve and willing to
-                        learn. From a young age, I have spent time learning and developing skills which I now use to<br />
+                        learn. From a young age, I have spent time learning and developing skills which I now use to
                         bring myself an income as a self-employed artist and designer online. During my time in
-                        secondary school, I balanced my education with making comics which I published every<br />
+                        secondary school, I balanced my education with making comics which I published every
                         week, helping me to develop time management skills. I’ve always had an interest in
-                        computers and video games, which have fueled my professional development and informed<br />
+                        computers and video games, which have fueled my professional development and informed
                         my career choices. Along with developing artistic skills, I spent a lot of time growing up
-                        developing technical skills relating to game development and am proficient in various<br />
-                        coding languages such as C, C++, C#, HLSL, Java and Javascript.<br />
+                        developing technical skills relating to game development and am proficient in various
+                        coding languages such as C, C++, C#, HLSL, Java and Javascript.
+                        <br />
                         <br />
                         In my spare time, I like to work on a range of creative projects such as video editing, art, and
-                        game development. I am currently using my skills to work on an experimental 3D game about<br />
+                        game development. I am currently using my skills to work on an experimental 3D game about
                         graffiti in the Unity engine where I have created all the assets myself, including 3D models
-                        and shaders written in HLSL. I am also semi-fluent in French, having studied it up to A-Level<br />
-                        and continuing to study it in my spare time in the years since.<br />
+                        and shaders written in HLSL. I am also semi-fluent in French, having studied it up to A-Level
+                        and continuing to study it in my spare time in the years since.
                     </p>
                 </div>
             </div>
