GOT RID OF THE WEIRD ? CHARACTER
WHY WERE YOU THERE BRO

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         learn. From a young age, I have spent time learning and developing skills which I now use to
                         bring myself an income as a self-employed artist and designer online. During my time in
                         secondary school, I balanced my education with making comics which I published every
-                        week, helping me to develop time management skills. I’ve always had an interest in
+                        week, helping me to develop time management skills. I've always had an interest in
                         computers and video games, which have fueled my professional development and informed
                         my career choices. Along with developing artistic skills, I spent a lot of time growing up
                         developing technical skills relating to game development and am proficient in various
