Revert "Education Cards + Title Edit"
This reverts commit bf63656e8129078e4ad00434afab4f0442c6a52e.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Jamie Darbon - Game Developer</title>
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/bootstrap.css" /> -->
 </head>
 <body>
     <div class="header">
@@ -21,7 +20,7 @@
             <div class="col-sm-12" id="titles">
                 <div id="title" class="sol-sm-10">
                     <p style="text-align:left;">Game Developer | Artist | Programmer</p>
-                    <h1 style="text-align:left; display:inline;">JAMIE<br>DARBON<h2 style="display: inline">BSc</h2></h1>
+                    <h1 style="text-align:left;">JAMIE<br>DARBON</h1>
                     <p style="text-align:left;">
                         Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2023, Jamie graduated from the University of Sussex
                         with a First Class Honours degree in "Games and Multimedia Environments".
@@ -37,56 +36,6 @@
                     <img src="Jamie-Darbon.jpg" width="35%" id="picture" />
                     <h1>About Me</h1>
                     <p id="text">
-                        I am a self-motivated and driven individual who is always striving to improve and willing to
-                        learn. From a young age, I have spent time learning and developing skills which I now use to
-                        bring myself an income as a self-employed artist and designer online. During my time in
-                        secondary school, I balanced my education with making comics which I published every
-                        week, helping me to develop time management skills. I've always had an interest in
-                        computers and video games, which have fueled my professional development and informed
-                        my career choices. Along with developing artistic skills, I spent a lot of time growing up
-                        developing technical skills relating to game development and am proficient in various
-                        coding languages such as C, C++, C#, HLSL, Java and Javascript.
-                        <br />
-                        <br />
-                        In my spare time, I like to work on a range of creative projects such as video editing, art, and
-                        game development. I am currently using my skills to work on an experimental 3D game about
-                        graffiti in the Unity engine where I have created all the assets myself, including 3D models
-                        and shaders written in HLSL. I am also semi-fluent in French, having studied it up to A-Level
-                        and continuing to study it in my spare time in the years since.
-                    </p>
-                </div>
-            </div>
-            <div class="container-fluid" id="education">
-                <div class="col-sm-8">
-                    <h1>Education</h1>
-                    <div class="row" id="cards">
-                        <div class="card">
-                            <div class="container" id="eduCard">
-                                <h1>Higher Education</h1>
-                                <p>Games and Multimedia Environments (BSc) - University of Sussex</p>
-                                <p>First Class Honours</p>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="container" id="eduCard">
-                                <h1>A-Levels</h1>
-                                <p>Dover Grammar School for Boys</p>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="container" id="eduCard">
-                                <h1>GCSEs</h1>
-                                <p>Dover Grammar School for Boys</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container-fluid" id="portfolio">
-                <div class="col-sm-8">
-                    <h1>Portfolio</h1>
-                    <p id="portfolioText">
                         I am a self-motivated and driven individual who is always striving to improve and willing to
                         learn. From a young age, I have spent time learning and developing skills which I now use to
                         bring myself an income as a self-employed artist and designer online. During my time in
