BROWSER COMPATIBILITY UPDATE
Education section now works on all browsers.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <title>Jamie Darbon - Game Developer</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href="css/bootstrap.css" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="header">
         <ul>
             <div class="container-fluid" id="headerContainer">
-                <input type="button" onClick="document.getElementById('education').scrollIntoView();" />
                 <li><p>About Me</p></li>
                 <li><p>Education</p></li>
                 <li><p>Portfolio</p></li>
