Portfolio Section Started

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         computers and video games, which have fueled my professional development and informed
                         my career choices. Along with developing artistic skills, I spent a lot of time growing up
                         developing technical skills relating to game development and am proficient in various
-                        coding languages such as C, C++, C#, HLSL, Java and Javascript.
+                        coding languages such as C#, HLSL, Java and Javascript.
                         <br />
                         <br />
                         In my spare time, I like to work on a range of creative projects such as video editing, art, and
@@ -114,24 +114,37 @@
                 <div class="col-sm-8">
                     <h1>Portfolio</h1>
                     <p id="portfolioText">
-                        I am a self-motivated and driven individual who is always striving to improve and willing to
-                        learn. From a young age, I have spent time learning and developing skills which I now use to
-                        bring myself an income as a self-employed artist and designer online. During my time in
-                        secondary school, I balanced my education with making comics which I published every
-                        week, helping me to develop time management skills. I've always had an interest in
-                        computers and video games, which have fueled my professional development and informed
-                        my career choices. Along with developing artistic skills, I spent a lot of time growing up
-                        developing technical skills relating to game development and am proficient in various
-                        coding languages such as C, C++, C#, HLSL, Java and Javascript.
-                        <br />
-                        <br />
-                        In my spare time, I like to work on a range of creative projects such as video editing, art, and
-                        game development. I am currently using my skills to work on an experimental 3D game about
-                        graffiti in the Unity engine where I have created all the assets myself, including 3D models
-                        and shaders written in HLSL. I am also semi-fluent in French, having studied it up to A-Level
-                        and continuing to study it in my spare time in the years since.
+                        I spend a large amount of my free time working on myself and creative projects and as such,
+                        I have a diverse and varied portfolio, with projects such as games, 3D models and art.<br />
+                        For example, this website is entirely my own work, with all code, design and content being
+                        made solely by myself. Below, you will find various examples of my work, organised into which role
+                        I played in its development.
                     </p>
                 </div>
+            </div>
+            <div id="graffiti">
+                <h2>Graffiti Street</h2>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <iframe width="420" height="315"
+                                src="https://www.youtube.com/embed/l1y9Llu-Pss">
+                        </iframe>
+                        <div id="graffitiContents">
+                            <p>Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises 
+                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that 
+                            the theme of graffiti was chosen.<br /> <br />
+                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through 
+                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project 
+                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the 
+                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have 
+                            graduated.<br />
+                            <br />
+                            You can find my final report for the project <a href="/assets/Final_Report_218721.pdf"></a>here</p>
+                        </div>
+                    </div>
+                    
+                </div>
+                
             </div>
         </div>
     </div>
