Updated portfolio section
Added Caff3.ine section and started on Snip and Shear section

--- a/index.html
+++ b/index.html
@@ -117,34 +117,76 @@
                         I spend a large amount of my free time working on myself and creative projects and as such,
                         I have a diverse and varied portfolio, with projects such as games, 3D models and art.<br />
                         For example, this website is entirely my own work, with all code, design and content being
-                        made solely by myself. Below, you will find various examples of my work, organised into which role
-                        I played in its development.
+                        made solely by myself. <br />Below, you will find various examples of my work, each detailing the 
+                        project's background and how I aided in its development.
                     </p>
                 </div>
             </div>
-            <div id="graffiti">
-                <h2>Graffiti Street</h2>
+            <div class="container-fluid" id="graffiti">
+                <h2>Graffiti Street (2023)</h2>
+                <h3>Solo Project - Programming, Art, 3D Modelling</h3>
                 <div class="row">
                     <div id="graffitiVideo">
-                        <iframe width="420" height="315"
-                                src="https://www.youtube.com/embed/l1y9Llu-Pss">
-                        </iframe>
-                        <div id="graffitiContents">
-                            <p>Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises 
-                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that 
+                        <p id="graffitiContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/l1y9Llu-Pss">
+                            </iframe>
+                            Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
+                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
                             the theme of graffiti was chosen.<br /> <br />
-                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through 
-                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project 
-                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the 
-                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have 
+                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
+                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
+                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
+                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
                             graduated.<br />
                             <br />
-                            You can find my final report for the project <a href="/assets/Final_Report_218721.pdf"></a>here</p>
-                        </div>
+                            You can find my final report for the project
+                            <a href="https://drive.google.com/file/d/18cX0Z23H9US1nIlUBWhC_q-xZweHS0Az/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>
+                        </p>
                     </div>
-                    
                 </div>
-                
+            </div>
+            <div class="container-fluid" id="caffeine">
+                <h2>Caff3.ine (2022)</h2>
+                <h3>Group Project - Programming, Environment Design</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="caffeineContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/pchPhwYF5Iw">
+                            </iframe>
+                            Caff3.ine was a group project I worked on in my second year at the University of Sussex. We were tasked with an 8 month development cycle, in which time, we were
+                            expected to produce a full, working game from conceptualisation to implementation. This project also required us to make a design document for the game.<br /><br />
+                            As this project was done in a group, it taught me key communication and team work skills, as well as giving me an idea of how to work in a professional environment
+                            through practices such as code reviews and version control via GitHub.<br /><br />
+                            Throughout this project, I worked on greyboxing the level design, system logic in C#, programming UI and implementing JSON compatibility with the UI.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" id="graffiti">
+                <h2>Snip and Shear (2023)</h2>
+                <h3>Group Project - Level Design, Animation, 3D Modelling</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="graffitiContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/l1y9Llu-Pss">
+                            </iframe>
+                            Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
+                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
+                            the theme of graffiti was chosen.<br /> <br />
+                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
+                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
+                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
+                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
+                            graduated.<br />
+                            <br />
+                            You can find my final report for the project
+                            <a href="https://drive.google.com/file/d/18cX0Z23H9US1nIlUBWhC_q-xZweHS0Az/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
