Mascot Platformer Section added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>Jamie Darbon - Game Developer</title>
@@ -8,19 +8,19 @@
     <div class="header">
         <ul>
             <div class="container-fluid" id="headerContainer">
-                <li><p>About Me</p></li>
-                <li><p>Education</p></li>
-                <li><p>Portfolio</p></li>
-                <li style="float: right;"><p>Contact</p></li>
-            </div>
-        </ul>
+            <li><p>About Me</p></li>
+            <li><p>Education</p></li>
+            <li><p>Portfolio</p></li>
+            <li style="float: right;"><p>Contact</p></li>
+    </div>
+    </ul>
     </div>
     <div class="container-fluid" id="contents">
         <div class="container-fluid" id="intro">
             <div class="col-sm-12" id="titles">
                 <div id="title" class="sol-sm-10">
                     <p style="text-align:left;">Game Developer | Artist | Programmer</p>
-                    <h1 style="text-align:left; display:inline;">JAMIE<br>DARBON<h2 style="display: inline">BSc</h2></h1>
+                    <h1 style="text-align:left; display:inline;">JAMIE<br>DARBON<h2 style="display: inline; font-family: Assistant; font-size: 24px;">BSc</h2></h1>
                     <p style="text-align:left;">
                         Jamie Darbon is a Game Developer living in Brighton, England.<br>In 2023, Jamie graduated from the University of Sussex
                         with a First Class Honours degree in "Games and Multimedia Environments".
@@ -117,7 +117,7 @@
                         I spend a large amount of my free time working on myself and creative projects and as such,
                         I have a diverse and varied portfolio, with projects such as games, 3D models and art.<br />
                         For example, this website is entirely my own work, with all code, design and content being
-                        made solely by myself. <br />Below, you will find various examples of my work, each detailing the 
+                        made solely by myself. <br />Below, you will find various examples of my work, each detailing the
                         project's background and how I aided in its development.
                     </p>
                 </div>
@@ -129,7 +129,7 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/l1y9Llu-Pss">
+                                    src="https://www.youtube.com/embed/l1y9Llu-Pss?autoplay=1">
                             </iframe>
                             Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
                             modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
@@ -153,7 +153,7 @@
                     <div id="graffitiVideo">
                         <p id="caffeineContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/pchPhwYF5Iw">
+                                    src="https://www.youtube.com/embed/pchPhwYF5Iw?autoplay=1">
                             </iframe>
                             Caff3.ine was a group project I worked on in my second year at the University of Sussex. We were tasked with an 8 month development cycle, in which time, we were
                             expected to produce a full, working game from conceptualisation to implementation. This project also required us to make a design document for the game.<br /><br />
@@ -171,24 +171,85 @@
                     <div id="graffitiVideo">
                         <p id="graffitiContents">
                             <iframe width="420" height="315"
-                                    src="https://www.youtube.com/embed/l1y9Llu-Pss">
+                                    src="https://www.youtube.com/embed/KPXSuODL4LI?autoplay=1">
                             </iframe>
-                            Graffiti Street is the project I worked on for my final dissertation at the University of Sussex. In this project, I aimed to create a game which utilises
-                            modern technologies to provide the player with an environment in which they could interact with the game world by drawing onto it. It is for this reason that
-                            the theme of graffiti was chosen.<br /> <br />
-                            In this project, I handled all the programming, design, modelling and art myself. The project required me to learn how to create my own shaders in Unity through
-                            the use of HLSL coding, in which I created the cel shader and outline shader you can see in the accompanying video. As previously mentioned, this project
-                            was made with the Unity engine, meaning the majority of the code outside of shaders was written in C#. I also used my existing skills in Blender to create the
-                            models which you can see in the game. Graffiti Street is in active development and is being updated outside of the scope of university, now that I have
-                            graduated.<br />
-                            <br />
-                            You can find my final report for the project
-                            <a href="https://drive.google.com/file/d/18cX0Z23H9US1nIlUBWhC_q-xZweHS0Az/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>
+                            Snip and Shear was the submission my group and I made for Global Game Jam 2023. The team on this project was the same as Caff3.ine. <br /><br />
+                            For this project, I wanted to take a break from programming and develop my skills in other areas, namely 3D modelling and animation, as I had just taught
+                            myself Blender and was eager to expand my portfolio. I also lead the level design for this game, designing and modelling the game map entirely by myself.
+                            When designing the level, I kept level design principles in mind and took inspiration from shooter games such as Halo and Team Fortress 2 when building the
+                            level, which resulted in a level with a large focus on chokepoints and high-risk, high-reward collectables.<br /><br />
+                            The game can be played in browser <a href="https://jamiedarbon.itch.io/snip-and-shear" target="_blank">here.</a>
                         </p>
                     </div>
                 </div>
             </div>
+            <div class="container-fluid" id="caffeine">
+                <h2>Untitled Mascot Platformer (2022)</h2>
+                <h3>Solo Project - Programming, Character Design, Art, Animation</h3>
+                <div class="row">
+                    <div id="graffitiVideo">
+                        <p id="caffeineContents">
+                            <iframe width="420" height="315"
+                                    src="https://www.youtube.com/embed/V9O4V4eZxuQ?autoplay=1">
+                            </iframe>
+                            This project was made as a solo endeavour in the summer of 2022 between the end of my second year and the start of my final year at university. <br /><br />
+                            At university, I had only been taught how to work with 3D and while I had prior experience with Unity 2D, I did not have experience working with spritesheets
+                            and the animator component. This, combined with a desire to learn animation and develop my skills as a game artist lead me to making this proof of concept.
+                            Ultimately, the project did not reach completion due to the sheer quantity of animation I would have had to do in order to turn it into a full commercial game,
+                            however, I learned some useful skills and experimented with using Trello and Kanban boards for the first time to organise the development of the project.<br /><br />
+                            Below you can see some concept art and animations used in the project.
+                        </p>
+                    </div>
+                </div>
+                <div class="slideshow-container">
+                    <div class="mySlides fade">
+                        <img src="MC concept art.png" style="width:100%;">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="MC Ref.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="Mascot_Idle_Colour.gif" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <img src="Mascot_Run.gif" style="width:100%">
+                    </div>
+                    <div style="text-align: center">
+                        <a class="prev" onclick="plusSlides(-1)">❮</a>
+                        <a class="next" onclick="plusSlides(1)">❯</a>
+                    </div>
+                </div>
+                <br>
+            </div>
         </div>
     </div>
+    <script>
+        let slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
+    </script>
 </body>
 </html>
