Concept art swap
Swapped concept art to be more coherent

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                 </div>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                        <img src="MC concept art.png" style="width:100%;">
+                        <img src="MC Ref" style="width:100%;">
                     </div>
                     <div class="mySlides fade">
-                        <img src="MC Ref.png" style="width:100%">
+                        <img src="MC concept art.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
                         <img src="Mascot_Idle_Colour.gif" style="width:100%">
